force-app/main/default/objects/Budget_Line_Item__c/Budget_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This will capture the calculated budget line details from Budget Calculator tool. Please note that Budget Calculator will be a custom developed tool built &amp; integrated with Salesforce. Later the calculated values will be stored in this object.</description>
    <label>Budget Line Item</label>
    <nameField>
        <displayFormat>BLI-{00000}</displayFormat>
        <label>Budget Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>