force-app/main/default/objects/Budget_Line_Item__c/fields/Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Amount__c</fullName>
    <formula>Year_1_Cost__c +  Year_2_Cost__c +  Year_3_Cost__c +  Year_4_Cost__c + Year_5_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>