force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Amount across all 7 years. Exclusive of GST.</inlineHelpText>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>