force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Apply_Shortfall__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Apply_Shortfall__c</fullName>
    <description>Represents whether shortfall needs to be provided for this item</description>
    <formula>RecordType.DeveloperName = &apos;I_RS_Salary&apos; &amp;&amp; TEXT(I_RS_Category__c) &lt;&gt; &apos;Student&apos; &amp;&amp; TEXT(I_RS_Category__c) &lt;&gt; &apos;Non-La Trobe Researcher&apos; &amp;&amp; !I_RS_In_Kind__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apply Shortfall</label>
    <type>Checkbox</type>
</CustomField>