force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Budget__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Budget__c</fullName>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Budget Line Items</relationshipLabel>
    <relationshipName>Budget_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>