force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Cash_Amount_Inc_GST_Currency__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cash_Amount_Inc_GST_Currency__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Amount over all 7 years. Inclusive of GST.</inlineHelpText>
    <label>Total Cost Inc. GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>