force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Cash_Amount_Inc_GTS__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cash_Amount_Inc_GTS__c</fullName>
    <description>Total Amount across all 7 years. Exclusive of GST.</description>
    <formula>IF(
!I_RS_In_Kind__c,
I_RS_Amount__c + (I_RS_Amount__c * (0.10)),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount across all 7 years. Exclusive of GST.</inlineHelpText>
    <label>Cash Amount Inc. GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>