force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Cash_Contributions__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Cash_Contributions__c</fullName>
    <formula>IF ( I_RS_In_Kind__c = FALSE,
Year_1_Cost__c + Year_2_Cost__c + Year_3_Cost__c + Year_4_Cost__c + Year_5_Cost__c + Year_6_Cost__c + Year_7_Cost__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>