force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Field Work</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Current La Trobe staff</fullName>
            </value>
            <value>
                <fullName>Future La Trobe staff</fullName>
            </value>
            <value>
                <fullName>Research Assistant</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Non-La Trobe researcher</fullName>
            </value>
            <value>
                <fullName>Personnel</fullName>
            </value>
            <value>
                <fullName>HDR Stipends</fullName>
            </value>
            <value>
                <fullName>Teaching Relief</fullName>
            </value>
            <value>
                <fullName>Field Research</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Cash External</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>