force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Collaborators_and_Sub_Contractors__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Collaborators_and_Sub_Contractors__c</fullName>
    <formula>IF(
TEXT(I_RS_Category__c) = &quot;Cash External&quot;,
I_RS_Amount__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collaborators and Sub-Contractors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>