force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact_Person__c</fullName>
    <description>Used in reporting. Shows either the Contact&apos;s name, or the Category, depending on the data available</description>
    <formula>IF(
!ISBLANK( I_RS_Contact__c ),
I_RS_Contact__r.FirstName + &apos; &apos; + I_RS_Contact__r.LastName,
 TEXT(I_RS_Category__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person</label>
    <type>Text</type>
</CustomField>