force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contribution_Type__c</fullName>
    <formula>IF(
I_RS_In_Kind__c,
&quot;In Kind&quot;,
&quot;Funding&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution Type</label>
    <type>Text</type>
</CustomField>