force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_In_Kind__c.field-meta.xml
<CustomField>
    <fullName>I_RS_In_Kind__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick for In-Kind. Untick for In-Cash.</inlineHelpText>
    <label>In Kind</label>
    <type>Checkbox</type>
</CustomField>