force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Is_Clone__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Is_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsClone</label>
    <type>Checkbox</type>
</CustomField>