force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_La_Trobe__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe__c</fullName>
    <description>This is referenced by a report. This value will return Total Amount anything that is tagged as Part of La Trobe and is not in Kind</description>
    <formula>IF(
I_RS_Part_of_La_Trobe__c = False &amp;&amp;  I_RS_In_Kind__c = FALSE,
I_RS_Amount__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>