force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_La_Trobe_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_La_Trobe_Total_Amount__c</fullName>
    <description>Used in &apos;La Trobe Total&apos; rollup summary on Budget. If Funder is LTU, use Total Cost. Otherwise, just use Shortfall</description>
    <formula>IF(
I_RS_Part_of_La_Trobe__c,
I_RS_Amount__c,
I_RS_Short_Fall__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>La Trobe Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>