force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Line_Item_Permission_Delete__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Line_Item_Permission_Delete__c</fullName>
    <description>Dictates whether a user is allowed (excluding config such as Profile) to delete this record. Is currently based solely on Budget object formula, but can be changed. Is used as safeguard on deleting Budget Line Items that shouldn&apos;t be deleted, in the event the Budget Calculator doesn&apos;t lock down properly.</description>
    <formula>I_RS_Budget__r.I_RS_Line_Item_Permission_Delete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Permission - Delete</label>
    <type>Checkbox</type>
</CustomField>