force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_On_Cost__c.field-meta.xml
<CustomField>
    <fullName>I_RS_On_Cost__c</fullName>
    <formula>IF(
 RecordType.DeveloperName = &apos;I_RS_Salary&apos; &amp;&amp; TEXT(I_RS_Category__c) &lt;&gt; &apos;Student&apos; &amp;&amp; TEXT(I_RS_Category__c) &lt;&gt; &apos;Non-La Trobe Researcher&apos;,
 
I_RS_Organisation__r.I_RS_Maximum_Allowed_On_Cost__c,

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On-Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>