force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Organisation__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget Line Items</relationshipLabel>
    <relationshipName>Budget_Line_Items_Org</relationshipName>
    <type>Lookup</type>
</CustomField>