force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Organisation_Being_Funded__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Organisation_Being_Funded__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This is the &apos;Provided To&apos; field on the Budget calculator. Refers to the Organisation receiving funds as part of this Line Item</inlineHelpText>
    <label>Organisation Being Funded</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget Line Items (Organisation Being Funded)</relationshipLabel>
    <relationshipName>Budget_Line_Items_Orgs_Being_Funded</relationshipName>
    <type>Lookup</type>
</CustomField>