force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Other_Contributors_Cash__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Other_Contributors_Cash__c</fullName>
    <formula>IF(
I_RS_Budget__r.I_RS_Project_Proposal__r.I_RS_Account_Organisation__c &lt;&gt; I_RS_Organisation__c &amp;&amp;
I_RS_Organisation__r.I_RS_Part_of_La_Trobe__c = False &amp;&amp;
I_RS_Organisation__r.I_RS_Other_Eligible_Orgs__c = False &amp;&amp;
I_RS_In_Kind__c = FALSE,
I_RS_Amount__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Contributors Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>