force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Part_of_La_Trobe__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Part_of_La_Trobe__c</fullName>
    <formula>I_RS_Organisation__r.I_RS_Part_of_La_Trobe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part of La Trobe</label>
    <type>Checkbox</type>
</CustomField>