force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Record_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Record_Type_Formula__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>