force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Salary_Grade__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Salary_Grade__c</fullName>
    <formula>IF(
TEXT(I_RS_Category__c) = &quot;Future La Trobe staff&quot; ||
TEXT(I_RS_Category__c) = &quot;Research Assistant&quot; ||
TEXT(I_RS_Category__c) = &quot;Student&quot;,

TEXT(I_RS_Sub_Category__c),

IF(
TEXT(I_RS_Category__c) = &quot;Current La Trobe staff&quot;,
I_RS_Contact__r.I_RS_Salary_Grade_Standard__c,

&quot;&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary Grade</label>
    <type>Text</type>
</CustomField>