force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_SAP_Category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_SAP_Category__c</fullName>
    <label>SAP Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salary Costs</fullName>
            </value>
            <value>
                <fullName>Repairs/Maintenance</fullName>
            </value>
            <value>
                <fullName>Computer equipment</fullName>
            </value>
            <value>
                <fullName>Plant &amp; Equipment</fullName>
                <label>Plants &amp; Equipment</label>
            </value>
            <value>
                <fullName>Advertising/ Promotional Activities</fullName>
            </value>
            <value>
                <fullName>Professional/Consulting/Contractual Fees</fullName>
            </value>
            <value>
                <fullName>Books &amp; Publications</fullName>
            </value>
            <value>
                <fullName>Stationery &amp; Office Supplies</fullName>
            </value>
            <value>
                <fullName>Scholarships</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Materials / Consumables / Sundry expenses</fullName>
            </value>
            <value>
                <fullName>Transfer to Other Universities</fullName>
            </value>
            <value>
                <fullName>Licenses/ Registration/ Subscriptions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>