force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Short_Fall__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Short_Fall__c</fullName>
    <label>Shortfall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>