force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Unit_of_Time__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Unit_of_Time__c</fullName>
    <label>Unit of Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>