force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Year_1_Report__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year_1_Report__c</fullName>
    <formula>IF(
NOT(ISBLANK(I_RS_Budget__r.I_RS_Project_Proposal__r.I_RS_Project_Start_Date__c)),
TEXT(YEAR(I_RS_Budget__r.I_RS_Project_Proposal__r.I_RS_Project_Start_Date__c)),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year 1</label>
    <type>Text</type>
</CustomField>