force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Year_1_Shortfall__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year_1_Shortfall__c</fullName>
    <formula>IF(
I_RS_Apply_Shortfall__c,

(I_RS_Budget__r.I_RS_La_Trobe_On_Costs__c *  I_RS_Year_1_Base_Salary__c ) -  I_RS_Year_1_On_Cost_Amount__c,

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year 1 Shortfall</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>