force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Year_2_Base_Salary__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year_2_Base_Salary__c</fullName>
    <label>Year 2 Base Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>