force-app/main/default/objects/Budget_Line_Item__c/fields/I_RS_Year_3_On_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year_3_On_Cost_Amount__c</fullName>
    <formula>I_RS_Year_3_Base_Salary__c * I_RS_On_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year 3 On-Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>