force-app/main/default/objects/Budget_Line_Item__c/fields/Year_1_Cost__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Amount for this Budget Item over Year 1</inlineHelpText>
    <label>Year 1 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>