force-app/main/default/objects/Budget_Line_Item__c/fields/Year_1_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Year_1_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For Salary Items, this is the number of time units. For Non-Salary, this is the Quantity of Items.</description>
    <inlineHelpText>For Salary Items, this is the number of time units. 

For Non-Salary, this is the Quantity of Items.</inlineHelpText>
    <label>Year 1 Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>