force-app/main/default/objects/Budget_Line_Item__c/fields/Year_2_Cost__c.field-meta.xml
<CustomField>
    <fullName>Year_2_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Year 2 Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>