force-app/main/default/objects/Budget_Line_Item__c/fields/Year_3_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Year_3_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Year 3 Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>