force-app/main/default/objects/Budget_Line_Item__c/recordTypes/I_RS_Collaborator_SubContractor.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Collaborator_SubContractor</fullName>
    <active>true</active>
    <label>Collaborator/SubContractor</label>
</RecordType>