force-app/main/default/objects/Budget_Line_Item__c/recordTypes/I_RS_Non_Salary.recordType-meta.xml
<RecordType>
    <fullName>I_RS_Non_Salary</fullName>
    <active>true</active>
    <label>Non-Salary</label>
</RecordType>