force-app/main/default/objects/Budget_Line_Item__c/validationRules/Cannot_enter_more_than_47_for_week_item.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_enter_more_than_47_for_week_item</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(I_RS_Unit_of_Time__c) = &apos;Weeks&apos; &amp;&amp;
(Year_1_Quantity__c &gt; 47 || 
Year_2_Quantity__c &gt; 47 ||
Year_3_Quantity__c &gt; 47 ||
Year_4_Quantity__c &gt; 47 ||
Year_5_Quantity__c &gt; 47)</errorConditionFormula>
    <errorDisplayField>I_RS_Unit_of_Time__c</errorDisplayField>
    <errorMessage>Cannot enter more than 47 weeks per Units column</errorMessage>
</ValidationRule>